Removed resolved endpoint and merged it with get operation
